update api hrd - tambah endpoint get divisi aktif
